cluster/core/networking/traefik/default-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-http-backend-ingress
  namespace: networking
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    haproxy-ingress-proxy.pfsense.org/enabled: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: default.${SECRET_DOMAIN}
spec:
  tls:
    - secretName: "${SECRET_DOMAIN//./-}-tls"
  defaultBackend:
    service:
      name: default-http-backend-service
      port:
        number: 80
  rules:
  - host: default.${SECRET_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: default-http-backend-service
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: default-http-backend-service
            port:
              number: 80
